# Fotix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  build.sh  grub.cfg  link.ld  update_and_run.sh
docs/: descriptor_tables.md  framebuffer.md  interrupts.md  pit.md  ports.md
include/: common.h  descriptor_tables.h  elf.h  fs.h  initrd.h  isr.h  keyboard.h  kheap.h  monitor.h  multiboot.h  ordered_array.h  paging.h  syscall.h  task.h  timer.h
src/: README  boot.s  common.c  common.h  descriptor_tables.c  descriptor_tables.h  dt_asm.s  elf.c  elf.h  fs.c  fs.h  gdt_asm.s  initrd.c  interrupt.s  isr.c  isr.h  keyboard.c  keyboard.h  kheap.c  kheap.h  main.c  memdetect.c  memdetect.h  monitor.c  monitor.h  ordered_array.c  ordered_array.h  paging.c  paging.h  proc_util.s  process.c  process.h  process.s  syscall.c  task.c  task.h  timer.c
sys/: boot.s  common.c  descriptor_tables.c  dt_asm.s  elf.c  fs.c  initrd.c  isr.c  keyboard.c  kheap.c  main.c  monitor.c  ordered_array.c  paging.c  process.c  syscall.c  task.c  timer.c
utils/: prepare_toolchain.sh
